--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -28,3 +28,21 @@ main_jsp.table.href = \u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043D\u043E\u0
 pagination_tag.next = \u0421\u043B\u0435\u0434\u0443\u044E\u0449\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
 pagination_tag.previous = \u041F\u0440\u0435\u0434\u044B\u0434\u0443\u0449\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
 
+room_jsp.form_submit_book = \u0417\u0430\u0431\u0440\u043E\u043D\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+authorization.email = \u042D\u043B. \u0430\u0434\u0440\u0435\u0441
+authorization.password = \u041F\u0430\u0440\u043E\u043B\u044C
+authorization.first_name = \u0418\u043C\u044F
+authorization.last_name = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
+authorization.form_sign_up = \u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
+register_jsp.title.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+personal_account_jsp.title = \u041B\u0438\u0447\u043D\u044B\u0439 \u043A\u0430\u0431\u0438\u043D\u0435\u0442
+personal_account_jsp.href.personal_information = \u041B\u0438\u0447\u043D\u0430\u044F \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
+personal_account_jsp.href.orders = \u0417\u0430\u044F\u0432\u043A\u0438
+personal_account_jsp.href.bills = \u0421\u0447\u0435\u0442\u0430
+personal_account_jsp.form.submit_edit = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+personal_account_jsp.table.sum = \u0421\u0443\u043C\u043C\u0430 \u043A \u043E\u043F\u043B\u0430\u0442\u0435
+personal_account_jsp.order.accept = \u041F\u0440\u0438\u043D\u044F\u0442\u044C
+personal_account_jsp.order.cancel = \u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
+personal_account_jsp.bill.pay = \u041E\u043F\u043B\u0430\u0442\u0438\u0442\u044C
+
+
