--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -27,4 +27,8 @@ main_jsp.table.price = Price
 main_jsp.table.href = Select room
 pagination_tag.next = Next
 pagination_tag.previous = Previous
+available_rooms_jsp.set_room=Set room
+room_jsp.payment_status=Payment status
+room_jsp.payment_status.paid=Paid
+room_jsp.payment_status.not_paid=Not paid
 
