--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -45,4 +45,9 @@ personal_account_jsp.order.accept = \u041F\u0440\u0438\u043D\u044F\u0442\u044C
 personal_account_jsp.order.cancel = \u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
 personal_account_jsp.bill.pay = \u041E\u043F\u043B\u0430\u0442\u0438\u0442\u044C
 
+available_rooms_jsp.set_room= \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u043C\u0435\u0440
+room_jsp.payment_status= \u0421\u0442\u0430\u0442\u0443\u0441 \u043E\u043F\u043B\u0430\u0442\u044B
+room_jsp.payment_status.paid= \u041E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
+room_jsp.payment_status.not_paid= \u041D\u0435 \u043E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
+
 
