download bill functionality

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -31,4 +31,5 @@ available_rooms_jsp.set_room=Set room
 room_jsp.payment_status=Payment status
 room_jsp.payment_status.paid=Paid
 room_jsp.payment_status.not_paid=Not paid
+personal_account_jsp.bill.download=Download
 
