--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -32,4 +32,6 @@ room_jsp.payment_status=Payment status
 room_jsp.payment_status.paid=Paid
 room_jsp.payment_status.not_paid=Not paid
 personal_account_jsp.bill.download=Download
-
+registration_jsp.invalidPassword = Password length < 6.
+registration_jsp.invalidName = Valid characters in Russian and Latin.
+registration_jsp.invalidEmail = Please, enter correct email.
