--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -35,3 +35,30 @@ personal_account_jsp.bill.download=Download
 registration_jsp.invalidPassword = Password length < 6.
 registration_jsp.invalidName = Valid characters in Russian and Latin.
 registration_jsp.invalidEmail = Please, enter correct email.
+BUSINESS_DELUXE=Business deluxe
+STANDARD=Standard
+ECONOMY=Economy
+DELUXE=Deluxe
+message.success_order=Order done, thank you
+message.booked_room=Sorry, room is busy for these dates
+exception.same_date=You can't choose the same date
+exception.less_date=Arrival date cannot be less than departure date
+exception.past_date=Date can't be past!
+orders_jsp.table.href.find_rooms=Find rooms
+personal_account_jsp.bill.pay=Pay
+personal_account_jsp.order.cancel=Cancel
+personal_account_jsp.order.accept=Accept
+personal_account_jsp.table.sum=Sum to pay
+personal_account_jsp.form.submit_edit=Edit
+personal_account_jsp.href.bills=Bills
+personal_account_jsp.href.orders=Orders
+personal_account_jsp.href.personal_information=Personal information
+personal_account_jsp.title=Personal account
+register_jsp.title.registration=Registration
+authorization.form_sign_up=Sign up
+authorization.last_name=Last name
+authorization.first_name=First name
+authorization.password=Password
+authorization.email=Email
+room_jsp.form_submit_book=Book
+login_jsp.form.welcome=Welcome
