--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -27,7 +27,6 @@ main_jsp.table.price = \u0426\u0435\u043D\u0430
 main_jsp.table.href = \u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043D\u043E\u043C\u0435\u0440
 pagination_tag.next = \u0421\u043B\u0435\u0434\u0443\u044E\u0449\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
 pagination_tag.previous = \u041F\u0440\u0435\u0434\u044B\u0434\u0443\u0449\u0430\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
-
 room_jsp.form_submit_book = \u0417\u0430\u0431\u0440\u043E\u043D\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 authorization.email = \u042D\u043B. \u0430\u0434\u0440\u0435\u0441
 authorization.password = \u041F\u0430\u0440\u043E\u043B\u044C
@@ -44,12 +43,10 @@ personal_account_jsp.table.sum = \u0421\u0443\u043C\u043C\u0430 \u043A \u043E\u0
 personal_account_jsp.order.accept = \u041F\u0440\u0438\u043D\u044F\u0442\u044C
 personal_account_jsp.order.cancel = \u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
 personal_account_jsp.bill.pay = \u041E\u043F\u043B\u0430\u0442\u0438\u0442\u044C
-
 available_rooms_jsp.set_room= \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u043C\u0435\u0440
 room_jsp.payment_status= \u0421\u0442\u0430\u0442\u0443\u0441 \u043E\u043F\u043B\u0430\u0442\u044B
 room_jsp.payment_status.paid= \u041E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
 room_jsp.payment_status.not_paid= \u041D\u0435 \u043E\u043F\u043B\u0430\u0447\u0435\u043D\u043E
-
 exception.past_date = \u0414\u0430\u0442\u0430 \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043F\u0440\u043E\u0448\u0435\u0434\u0448\u0435\u0439
 exception.less_date = \u0414\u0430\u0442\u0430 \u0432\u044B\u0435\u0437\u0434\u0430 \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u0440\u0430\u043D\u044C\u0448\u0435 \u0434\u0430\u0442\u044B \u0437\u0430\u0435\u0437\u0434\u0430
 exception.same_date = \u041D\u0435\u043B\u044C\u0437\u044F \u0437\u0430\u0431\u0440\u043E\u043D\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043D\u043E\u043C\u0435\u0440 \u043D\u0430 \u043E\u0434\u043D\u0443 \u0438 \u0442\u0443 \u0436\u0435 \u0434\u0430\u0442\u0443
@@ -58,3 +55,10 @@ personal_account_jsp.bill.download=\u0421\u043A\u0430\u0447\u0430\u0442\u044C
 registration_jsp.invalidPassword = \u0414\u043B\u0438\u043D\u043D\u0430 \u043F\u0430\u0440\u043E\u043B\u044F < 6
 registration_jsp.invalidName = \u0422\u043E\u043B\u044C\u043A\u043E \u043A\u0438\u0440\u0438\u043B\u043B\u0438\u0446\u0430 \u0438 \u043B\u0430\u0442\u0438\u043D\u0438\u0446\u0430
 registration_jsp.invalidEmail = \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u044D\u043B. \u0430\u0434\u0440\u0435\u0441
+DELUXE = \u0414\u0435\u043B\u044E\u043A\u0441
+ECONOMY = \u042D\u043A\u043E\u043D\u043E\u043C
+STANDARD = \u0421\u0442\u0430\u043D\u0434\u0430\u0440\u0442
+BUSINESS_DELUXE = \u0411\u0438\u0437\u043D\u0435\u0441 \u0434\u0435\u043B\u044E\u043A\u0441
+message.success_order=\u0417\u0430\u043A\u0430\u0437 \u0441\u0434\u0435\u043B\u0430\u043D, \u0441\u043F\u0430\u0441\u0438\u0431\u043E
+orders_jsp.table.href.find_rooms=\u041F\u043E\u0438\u0441\u043A \u043D\u043E\u043C\u0435\u0440\u043E\u0432
+login_jsp.form.welcome=\u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C
